--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -50,6 +50,7 @@
    },
    "outputs": [],
    "source": [
+    "# We set a few things for seaborn to have uniform plots in the notebook\n",
     "sns.set(style=\"darkgrid\")\n",
     "sns.set_context(\"notebook\")\n",
     "sns.set_palette(\"RdPu_d\", 10)"
@@ -150,7 +151,7 @@
     "\n",
     "- For the Times, looking at the JSON response from the ranking website immediately led to the right data.\n",
     "- For TopUniversities, we searched for through occurence of \"qs-rankings data\" on Postman, and found the url linking to the source of the data.\n",
-    "- To find the additional information needed in the TopUniversities set, we used the Google dev tools to quickly check which html-classes pointed to the div tags containing the required information."
+    "- To find the additional information needed in the TopUniversities set, we used the Google dev tools to quickly check which html classes pointed to the div tags containing the required information."
    ]
   },
   {
@@ -183,7 +184,7 @@
    "metadata": {},
    "source": [
     "### Data retrieval\n",
-    "The first step is pretty step forward. We simply request the JSON and create a DataFrame containing all the needed information offered by the request."
+    "The first step is pretty straight forward. We simply request the JSON and create a DataFrame containing all the needed information offered by the request."
    ]
   },
   {
@@ -303,7 +304,7 @@
    },
    "outputs": [],
    "source": [
-    "#Takes a relatively long time to run when pkl file us not present\n",
+    "#Takes a relatively long time to run when pickle file is not present\n",
     "\n",
     "#We create a folder to store all the data.\n",
     "if not osp.exists(DATA_FOLDER):\n",
@@ -331,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have a few undefined values in the final \"top_frame\" set due to the lack of information on the website (data is just not present), so we simply propagate NAN values."
+    "We have a few undefined values in the final \"top_frame\" set due to the lack of information on the website (data is not present), so we simply propagate NAN values."
    ]
   },
   {
@@ -345,7 +346,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_fac_stud = top_frame\n",
@@ -374,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_int_stud = top_frame\n",
@@ -418,7 +423,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: change name of 'name' in graph to name of university\n",
     "cmap = plt.cm.get_cmap('Blues')\n",
     "pal = sns.color_palette(\"RdPu\", n_colors=14, desat=0.6)\n",
     "\n",
@@ -436,8 +440,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First note that the darkness of the bar represents the position in the ranking. The darker the better.\n",
-    "By plotting the first 20 we can observe through looking at the color that the top 10 universities by faulty/student ratio are almost all ranked in the top of the general ranking aswell.\n",
+    "First note that the darkness of the bar represents the position in the original ranking. The darker the better.\n",
+    "By plotting the first 20 we can observe through looking at the color that the top 10 universities by faulty/student ratio are almost all ranked in the top of the general ranking as well.\n",
+    "\n",
     "We note that no such pattern can be observed by plotting the student/international student ratio."
    ]
   },
@@ -495,8 +500,7 @@
    },
    "outputs": [],
    "source": [
-    "best_countries = best_countries.head(10)\n",
-    "best_regions = best_regions.head() #works as there are only 5 regions"
+    "best_countries = best_countries.head(10)"
    ]
   },
   {
@@ -521,15 +525,6 @@
    "metadata": {},
    "source": [
     "We can observe that the best schools lie in first world countries, with western countries being on the top. This is also reflected when sorting by region."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#top_frame whyyy is this here?"
    ]
   },
   {
@@ -619,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also have that the Times Higher Education does not include the region. This way, we decide to match the countries using the regions defined by the first ranking. "
+    "We also have the probblem that the Times Higher Education ranking does not include the region. Thus, we decide to match the countries using the regions defined by the first ranking. "
    ]
   },
   {
@@ -656,7 +651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Both universities are in Europe, so we simply \"hardcode\" them\n",
+    "#Both universities are in Europe, so we input the region manually\n",
     "times_frame.loc[times_frame.region.isnull(), 'region'] = 'Europe' \n",
     "times_frame.head()"
    ]
@@ -671,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#We create a file to store the Times Higher Education Ranking\n",
@@ -757,7 +754,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interesstingly, the faculty to student ration in the times ranking seems to contain very different values, hence we can not observe a similar distribution as for the topuniversities ranking.\n",
+    "Interestingly, the faculty to student ratio in the Times ranking seems to contain very different values, hence we can not observe a similar distribution as for the Top Universities ranking.\n",
+    "\n",
     "The international student to student ratio, however, is similarly distributed."
    ]
   },
@@ -772,7 +770,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike the TopUniversities ranking, the Times Higher Education does not include the region. We previously used to mapping defined in TopUniversities to map countries in Times to the regions."
+    "Unlike the TopUniversities ranking, the Times Higher Education ranking does not include the region. We previously used to mapping defined in TopUniversities to map countries in Times to the regions."
    ]
   },
   {
@@ -828,8 +826,7 @@
    },
    "outputs": [],
    "source": [
-    "best_countries = best_countries.head(10)\n",
-    "best_regions = best_regions.head()"
+    "best_countries = best_countries.head(10)"
    ]
   },
   {
@@ -851,7 +848,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We note that similarly to the topuniversities ranking, first world, mostly western countries fare the best. We can see that while the Topuniversities ranking didn't contain any african universities, the times ranking does. But unlike the topuniversities ranking, it does not seem to contain any latin american universities."
+    "We note that similarly to the topuniversities ranking, first world, mostly western countries fare the best. We can see that while the Top Universities ranking didn't contain any african universities, the Times ranking does. But unlike the Top Universities ranking, it does not seem to contain any latin american universities."
    ]
   },
   {
@@ -884,7 +881,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def ascii(s):\n",
@@ -977,7 +976,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['join_here'] = times_frame.name.map(university_name)\n",
@@ -991,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We go through each country to check if there are any unmatched universities or if they exist in only one of the rankings. This will allow us to understand the difficulties in each one of them. We could use the aliases, but in reality, it does not match and treat them separately below."
+    "We go through each country to check if there are any unmatched universities or if they exist in only one of the rankings. This will allow us to understand the difficulties in each one of them. We could use the aliases, but in reality, they do not help for matching."
    ]
   },
   {
@@ -1234,7 +1235,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by adding a column to enable the merging of the two rankings."
+    "We start by adding a column to enable the merging of the two rankings.\n",
+    "\n",
+    "Note that we decided on an inner join, as we will only take the universities in both rankings in this new DataFrame."
    ]
   },
   {
@@ -1440,8 +1443,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_uni.loc['rank_mean'] = best_uni.apply(lambda row:  calc_mean(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
-    "best_uni.loc['rank_dist'] =  best_uni.apply(lambda row:  calc_distance(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
+    "best_uni['rank_mean'] = best_uni.apply(lambda row:  calc_mean(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
+    "best_uni['rank_dist'] =  best_uni.apply(lambda row:  calc_distance(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
     "best_uni.sort_values(['rank_mean', 'rank_dist'], ascending=[True, True]).reset_index(drop=True)"
    ]
   },
@@ -1451,14 +1454,14 @@
    "source": [
     "Thus, as we can see, the best university considering both rankings would be Stanford University.\n",
     "\n",
-    "Note that the two universities that were first on one of the lists are still in the top 5. Oxford University is in fifth place while Massachusetts Institute of Tecnology (MIT) is in second. This is true for most of the universities that are in the top 5 as they were in the top 5 of both lists."
+    "Note that the two universities that were first on one of the lists are still in the top 5. Oxford University is in fifth place while Massachusetts Institute of Technology (MIT) is in second. This is true for most of the universities that are in the top 5 as they were in the top 5 of both lists."
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1472,7 +1475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
