Debugged heat map

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -202,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_frame = pd.DataFrame(topjson['data']).head(200)\n",
@@ -231,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -359,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'relative_rank'], ascending=[False, True])\n",
@@ -390,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'relative_rank'], ascending=[False, True])\n",
@@ -420,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cmap = plt.cm.get_cmap('Blues')\n",
@@ -457,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(top_frame['country'].value_counts())\n",
@@ -476,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(top_frame['region'].value_counts())\n",
@@ -507,6 +521,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -563,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame = pd.DataFrame(timesjson['data']).head(200) #Keep the first 200 schools\n",
@@ -602,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['faculty/students'] = 1/times_frame['faculty/students'].astype('float')\n",
@@ -638,7 +657,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['region'] = times_frame.country.map(regions_by_country)\n",
@@ -648,7 +669,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Both universities are in Europe, so we input the region manually\n",
@@ -699,7 +722,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_fac = times_frame[['name', 'faculty/students', 'relative_rank']]\n",
@@ -735,7 +760,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cmap = plt.cm.get_cmap('Blues')\n",
@@ -783,7 +810,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(times_frame['country'].value_counts())\n",
@@ -802,7 +831,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(times_frame['region'].value_counts())\n",
@@ -832,7 +863,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
@@ -907,7 +940,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "i = 0\n",
@@ -933,7 +968,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Mostly the same but the other way around.\n",
@@ -998,7 +1035,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This set gives us the set of countries for which both frames have unmatched universities\n",
@@ -1033,7 +1072,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Belgium\"\u001d",
@@ -1050,7 +1091,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Canada\"\u001d",
@@ -1067,7 +1110,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"France\"\u001d",
@@ -1084,7 +1129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Germany\"\u001d",
@@ -1101,7 +1148,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Hong Kong\"\u001d",
@@ -1118,7 +1167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"South Korea\"\u001d",
@@ -1135,7 +1186,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Spain\"\u001d",
@@ -1152,7 +1205,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Sweden\"\u001d",
@@ -1169,7 +1224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"United Kingdom\"\u001d",
@@ -1211,7 +1268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(university_name)"
@@ -1243,7 +1302,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['join_here'] = times_frame.name.map(university_name)\n",
@@ -1285,6 +1346,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1305,6 +1367,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1348,6 +1411,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1368,11 +1432,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Keep only bottom triangle\n",
-    "mask = np.zeros_like(corr, dtype=np.bool)\n",
+    "mask = np.zeros_like(cross_corr, dtype=np.bool)\n",
     "mask[np.triu_indices_from(mask)] = True\n",
     "\n",
     "# Set up the matplotlib figure\n",
@@ -1382,7 +1448,7 @@
     "cmap = sns.diverging_palette(220, 10, as_cmap=True)\n",
     "\n",
     "# Draw the heatmap with the mask and correct aspect ratio\n",
-    "sns.heatmap(corr, mask=mask, cmap=cmap, vmax=.3, center=0,\n",
+    "sns.heatmap(cross_corr, mask=mask, cmap=cmap, vmax=.3, center=0,\n",
     "    square=True, linewidths=.5, cbar_kws={\"shrink\": .5})\n",
     "\n",
     "plt.show()"
@@ -1440,7 +1506,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_uni['rank_mean'] = best_uni.apply(lambda row:  calc_mean(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
@@ -1461,7 +1529,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1475,7 +1543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
