Adding my changes, somebody check question 4

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -202,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_frame = pd.DataFrame(topjson['data']).head(200)\n",
@@ -233,9 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -363,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'relative_rank'], ascending=[False, True])\n",
@@ -396,9 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'relative_rank'], ascending=[False, True])\n",
@@ -428,9 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cmap = plt.cm.get_cmap('Blues')\n",
@@ -467,9 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(top_frame['country'].value_counts())\n",
@@ -488,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(top_frame['region'].value_counts())\n",
@@ -521,7 +507,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -578,9 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "times_frame = pd.DataFrame(timesjson['data']).head(200) #Keep the first 200 schools\n",
@@ -590,8 +573,7 @@
     "    times_frame['record_type'],\\\n",
     "    times_frame['subjects_offered'],\\\n",
     "    times_frame['stats_female_male_ratio'],\\\n",
-    "    times_frame['rank_order'],\\\n",
-    "    times_frame['aliases']\n",
+    "    times_frame['rank_order']\n",
     "\n",
     "transform_rank(times_frame,'rank')\n",
     "times_frame.rename(columns = {'stats_number_students': 'students', \n",
@@ -619,9 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "times_frame['faculty/students'] = 1/times_frame['faculty/students'].astype('float')\n",
@@ -657,9 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "times_frame['region'] = times_frame.country.map(regions_by_country)\n",
@@ -669,9 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Both universities are in Europe, so we input the region manually\n",
@@ -699,7 +675,7 @@
     "if osp.exists(times_file):\n",
     "    times_frame = load_pkl(times_file)\n",
     "else:\n",
-    "    times_frame = times_frame.reindex_axis(['country', 'region', 'name', 'relative_rank',\n",
+    "    times_frame = times_frame.reindex_axis(['country', 'region', 'name', 'aliases', 'relative_rank',\n",
     "                                         'absolute_rank', 'faculty/students', 'international/students', \n",
     "                                         'students', 'url'], axis=1)\n",
     "    save_pkl(times_frame, times_file)"
@@ -760,9 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cmap = plt.cm.get_cmap('Blues')\n",
@@ -781,7 +755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interestingly, the faculty to student ratio in the Times ranking seems to contain very different values, hence we can not observe a similar distribution as for the Top Universities ranking.\n",
+    "Interestingly, the faculty to student ratio in the Times ranking seems to contain very different values, as well different lower ranking universities (which a higher fac/stud ratio), hence we can not observe a similar distribution as for the Top Universities ranking.\n",
     "\n",
     "The international student to student ratio, however, is similarly distributed."
    ]
@@ -810,9 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(times_frame['country'].value_counts())\n",
@@ -831,9 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(times_frame['region'].value_counts())\n",
@@ -863,9 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
@@ -940,9 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "i = 0\n",
@@ -968,9 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Mostly the same but the other way around.\n",
@@ -1035,9 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This set gives us the set of countries for which both frames have unmatched universities\n",
@@ -1072,9 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"Belgium\"\u001d",
@@ -1091,9 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"Canada\"\u001d",
@@ -1110,9 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"France\"\u001d",
@@ -1129,9 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"Germany\"\u001d",
@@ -1148,9 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"Hong Kong\"\u001d",
@@ -1167,9 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"South Korea\"\u001d",
@@ -1186,9 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"Spain\"\u001d",
@@ -1205,9 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"Sweden\"\u001d",
@@ -1224,9 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_universities(\"United Kingdom\"\u001d",
@@ -1268,9 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "len(university_name)"
@@ -1302,21 +1244,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "times_frame['join_here'] = times_frame.name.map(university_name)\n",
-    "merged_frame = pd.merge(times_frame, top_frame, how='inner', left_on=['join_here'], right_on=['name'])\n",
-    "merged_frame.shape"
+    "merged_frame = pd.merge(times_frame, top_frame, how='inner', left_on=['join_here'], right_on=['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#quick renaming for more convenient reading later\n",
+    "merged_frame = merged_frame.rename(columns={'international/students_x': 'times: international/students',\n",
+    "                                            'international/students_y': 'topunis: international/students',\n",
+    "                                            'faculty/students_x': 'times: faculty/students',\n",
+    "                                            'faculty/students_y': 'topunis: faculty/students',\n",
+    "                                            'relative_rank_x': 'times rank',\n",
+    "                                            'relative_rank_y': 'topunis rank',\n",
+    "                                           })"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we can see that we could indeed find 160 matchings thanks to the dictionary method"
+    "We can see that we could indeed find 160 matchings thanks to the dictionary method"
    ]
   },
   {
@@ -1346,7 +1301,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1367,7 +1321,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1381,7 +1334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When comparing both rankings independently, we can see that the Times Higher Education ranking does not rely as much on the number of faculty members per student and on the percentage of international students of a university to decide which university is better."
+    "When comparing both rankings independently, we can see that for the Times Higher Education ranking the number of faculty members per student and on the percentage of international students of a university is less correlated with the ranking. This could be because Topuniversities takes faculty/student ratio more into consideration for their ranking. We can not be sure of this however, correlation != causation."
    ]
   },
   {
@@ -1399,10 +1352,11 @@
     "- The relative ranks of both rankings are strongly correlated (but far from perfectly aligned).\n",
     "- The ratios are also strongly correlated but the fact that they are not equal to 1 signals discrepancies between both rankings (the provided numbers are clearly different)\n",
     "\n",
+    "\n",
+    "##fix this\n",
     "When looking more closely, we can find even more insights on each ranking alone :\n",
     "- The correlation between the TopUniversities ranking and both ratios is a lot smaller when looking at the universities present in both ranking.  \n",
     "- On the other hand, the Times Higher Education ranking is a lot more correlated to its ratios.\n",
-    " - This could indicate that that times education takes these ratios into consideration in its ranking.\n",
     "\n",
     "From these numbers, we can thus see that it is very complicated (and often misleading) to compare 2 rankings."
    ]
@@ -1411,13 +1365,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "cross_corr = merged_frame[['relative_rank_x', 'faculty/students_x', 'international/students_x', \n",
-    "                                  'relative_rank_y', 'faculty/students_y', 'international/students_y']]\n",
+    "cross_corr = merged_frame[['times rank', 'times: faculty/students', 'times: international/students', \n",
+    "                                  'topunis rank', 'topunis: faculty/students', 'topunis: international/students']]\n",
     "cross_corr = cross_corr.corr()\n",
     "cross_corr"
    ]
@@ -1432,9 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Keep only bottom triangle\n",
@@ -1458,6 +1409,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can see at one glance that the variables in the times and in the topuniversities ranking are correlated. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 5 : Best Universities"
    ]
   },
@@ -1471,12 +1429,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "best_uni = merged_frame[['name_x', 'name_y', 'relative_rank_x', 'relative_rank_y']]"
+    "best_uni = merged_frame[['aliases', 'times rank', 'topunis rank']]"
    ]
   },
   {
@@ -1506,14 +1462,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "best_uni['rank_mean'] = best_uni.apply(lambda row:  calc_mean(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
-    "best_uni['rank_dist'] =  best_uni.apply(lambda row:  calc_distance(row['relative_rank_x'], row['relative_rank_y']), axis=1)\n",
-    "best_uni.sort_values(['rank_mean', 'rank_dist'], ascending=[True, True]).reset_index(drop=True)"
+    "best_uni['rank_mean'] = calc_mean(best_uni.loc[:,'times rank'], best_uni.loc[:,'topunis rank'])\n",
+    "best_uni['rank_dist'] =  calc_distance(best_uni['times rank'], best_uni['topunis rank'])\n",
+    "best_uni.sort_values(['rank_mean', 'rank_dist'], ascending=[True, True]).reset_index(drop=True).head(30)"
    ]
   },
   {
@@ -1522,21 +1476,23 @@
    "source": [
     "Thus, as we can see, the best university considering both rankings would be Stanford University.\n",
     "\n",
-    "Note that the two universities that were first on one of the lists are still in the top 5. Oxford University is in fifth place while Massachusetts Institute of Technology (MIT) is in second. This is true for most of the universities that are in the top 5 as they were in the top 5 of both lists."
+    "Note that the two universities that were first on one of the lists are still in the top 5. Oxford University is in fifth place while Massachusetts Institute of Technology (MIT) is in second. This is true for all of the universities that are in the top 10 (except princeton) as they were in the top 10 of both lists."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Change in rankings"
+    "### Observing the change in rankings"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can observe the change in ranking for the first 10 universities. Left we have the first ranking, right we have the second, and in the middle, the mean."
+    "Here we can observe the change in ranking for the first 40 universities. Left we have the first ranking, right we have the second, and in the middle, the combined ranking.\n",
+    "\n",
+    "The graph quickly shows us how the rankings for each university change. we can observe that for top ranked universities, the ranking doesn't change much, where as for lower ranked universities the ranking varies much more between the two."
    ]
   },
   {
@@ -1545,9 +1501,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_uni = best_uni[['name_x', 'relative_rank_x', 'rank_mean', 'relative_rank_y']]\n",
-    "best_uni_10 = best_uni.head(10)\n",
-    "pd.plotting.parallel_coordinates(best_uni_10, 'name_x', colormap=plt.get_cmap(\"cool\"))\n",
+    "best_uni = best_uni[['aliases', 'times rank', 'rank_mean', 'topunis rank']]\n",
+    "best_uni_10 = best_uni.head(40)\n",
+    "pd.plotting.parallel_coordinates(best_uni_10, 'aliases', colormap=plt.get_cmap(\"cool\"))\n",
     "plt.gca().legend_.remove()\n",
     "plt.show()"
    ]
@@ -1565,8 +1521,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_uni = best_uni[['name_x', 'relative_rank_x', 'rank_mean', 'relative_rank_y']]\n",
-    "pd.plotting.parallel_coordinates(best_uni, 'name_x', colormap=plt.get_cmap(\"cool\"))\n",
+    "best_uni = best_uni[['aliases', 'times rank', 'rank_mean', 'topunis rank']]\n",
+    "pd.plotting.parallel_coordinates(best_uni, 'aliases', colormap=plt.get_cmap('coolwarm'))\n",
     "plt.gca().legend_.remove()\n",
     "plt.show()"
    ]
@@ -1589,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
